--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
     width: 100%;
     height: 170px;
     z-index: 1;
+    background-color: white;
 }
 
 .header-box {
@@ -203,5 +204,79 @@ ul,a {
     text-align: center;
 }
 
+/* section3 */
 
+.most-often-container {
+    padding-top: 100px;
+}
 
+.most-often-container h2 {
+    font-size: 40px;
+    font-family: 'Solitreo', cursive;
+    color: rgba(150, 101, 101, 1);
+}
+
+.Number-of-percentages-container {
+    padding-top: 64px;
+    line-height: 60px;
+}
+
+.percentages-paragraph,p {
+    display: flex;
+    gap: 70%;
+    font-size: 40px;
+    padding-left: 40px;
+    padding-bottom: 3px;
+}
+
+.percentages-paragraph span {
+    color: rgba(150, 101, 101, 1);
+}
+
+.unmain {
+    position: relative;
+    width: 80%;
+    height: 50px;
+    border-radius: 80px;
+    border: 1px solid rgba(112, 112, 112, 1);
+    background-color: rgba(240, 236, 236, 1);
+}
+
+.main {
+    position: absolute;
+    width: 1200px;
+    height: 50px;
+    border-radius: 80px;
+    border: 1px solid rgba(112, 112, 112, 1);
+    background-color: rgba(247, 247, 248, 1);
+    
+}
+
+.about-elsie-container {
+    display: flex;
+    padding-top: 100px;
+    gap: 94px;
+    font-family: 'Solitreo', cursive;
+    color: rgba(150, 101, 101, 1);
+}
+
+.elise-img img {
+    width: 548px;
+    height: 534px;
+    border-radius: 50%;
+    border: 1px solid #707070;
+}
+
+.elsie-paragraph p {
+    display: inline-block;
+    width: 500px;
+    font-size: 40px;
+    padding-top: 50px;
+}
+
+.elsie-paragraph span {
+    display: block;
+    width: 550px;
+    font-size: 40px;
+    padding-left: 210px;
+}
