--- a/style.css
+++ b/style.css
@@ -330,3 +330,14 @@ ul,a {
     border: 1px solid #956464;
     background-color:  #707070;
 }
+
+/* footer */
+
+
+.just-text {
+    width: 100%;
+    height: 100px;
+    font-size: 20px;
+    text-align: center;
+    transform: translateY(50%);
+}
